--- a/packages/component-library/.storybook/preview-body.html
+++ b/packages/component-library/.storybook/preview-body.html
@@ -1,3 +1,4 @@
+<style>
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -10,3 +11,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+</style>
